M8: GH Actions 워크플로 추가

--- a/.github/workflows/fetch_news.yml
+++ b/.github/workflows/fetch_news.yml
@@ -1,8 +1,13 @@
 name: M8 Fetch News
+
 on:
   schedule:
     - cron: "0 0,12 * * *"   # UTC 00:00 / 12:00 (하루 2회)
-  workflow_dispatch: {}
+  workflow_dispatch: {}       # 수동 실행 허용
+
+permissions:
+  contents: write             # snapshots.json 커밋을 위해 필요
+
 jobs:
   run:
     runs-on: ubuntu-latest
@@ -11,11 +16,15 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
+
       - run: npm ci
-      - run: npm run m8:news
+
+      - name: Run M8 News Agent (Gemini)
+        run: npm run m8:news
         env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      - name: Commit & Push
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+
+      - name: Commit & Push snapshots.json
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
