--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "m8:talk": "node scripts/agent_conversation.mjs",
     "m9:github": "node scripts/m9_github_agent.mjs",
     "m9:rank": "node scripts/m9_rankings_agent.mjs",
-    "m10:note": "node scripts/m10_ai_note.mjs"
+    "m10:note": "node scripts/m10_ai_note.mjs",
+    "m8:talk-once": "node scripts/agent_talk_once.mjs"
   },
   "keywords": [],
   "author": "",
