fix(ci): replace workflows with validated minimal YAML

--- a/.github/workflows/agents_talk.yml
+++ b/.github/workflows/agents_talk.yml
@@ -15,7 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with: { node-version: '20' }
+        with:
+          node-version: '20'
       - run: npm ci
       - name: Run talk (single-call, cached)
         run: npm run m8:talk-once
