--- a/.github/workflows/ai-dashboard-update.yml
+++ b/.github/workflows/ai-dashboard-update.yml
@@ -6,8 +6,8 @@ permissions:
 
 on:
   schedule:
-    - cron: "10 23 * * *"   # KST 08:10
-    - cron: "10 11 * * *"   # KST 20:10
+    - cron: '10 23 * * *'   # KST 08:10
+    - cron: '10 11 * * *'   # KST 20:10
   workflow_dispatch: {}
 
 concurrency:
@@ -15,47 +15,42 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  run:
+  update:
     runs-on: ubuntu-latest
     env:
       GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
     steps:
       - name: Checkout main
         uses: actions/checkout@v4
-        with: { ref: main, fetch-depth: 0 }
+        with:
+          ref: main
+          fetch-depth: 0
 
       - name: Setup Node
         uses: actions/setup-node@v4
-        with: { node-version: '20' }
+        with:
+          node-version: '20'
 
-      - name: Install deps
+      - name: Install dependencies
         run: npm ci
 
-      # --- M8: 뉴스 (필수) ---
       - name: Run News Agent
-        run: |
-          if [ -f scripts/agent_conversation.mjs ]; then
-            node scripts/agent_conversation.mjs
-          else
-            echo "scripts/agent_conversation.mjs not found" && exit 1
-          fi
+        run: node scripts/agent_conversation.mjs
 
-      # --- 가드: 파일 존재 & 비어있지 않음 ---
       - name: Guard: news_current.json must exist & non-empty
         run: |
           test -s public/data/news_current.json
-          node -e "const fs=require('fs');const a=JSON.parse(fs.readFileSync('public/data/news_current.json','utf8'));if(!Array.isArray(a)||a.length===0){throw new Error('Empty news_current.json')}"
+          node -e "const fs=require('fs');const a=JSON.parse(fs.readFileSync('public/data/news_current.json','utf8'));if(!Array.isArray(a)||a.length===0)process.exit(1)"
+
       - name: Guard: snapshots must exist
         run: test -s public/data/news_snapshots.json
 
-      # --- 디버그 아티팩트 ---
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: dashboard-json
           path: public/data/*.json
 
-      # --- PR 자동 생성/병합(권한 없으면 PR만 생성) ---
       - name: Create Pull Request (auto-merge)
         uses: peter-evans/create-pull-request@v6
         with:
