--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@google/genai": "^1.13.0",
     "@google/generative-ai": "^0.24.1",
+    "ajv": "^8.17.1",
     "rss-parser": "^3.13.0"
   }
 }
