ci(update): step1 checkout/setup/npmci

--- a/.github/workflows/ai-dashboard-update.yml
+++ b/.github/workflows/ai-dashboard-update.yml
@@ -2,7 +2,14 @@ name: AI Dashboard Auto Update
 on:
   workflow_dispatch: {}
 jobs:
-  ok:
+  update:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "✅ workflow yaml is valid"
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install deps
+        run: npm ci
