--- a/.github/workflows/ai-dashboard-update.yml
+++ b/.github/workflows/ai-dashboard-update.yml
@@ -1,10 +1,17 @@
 name: AI Dashboard Auto Update
 
 on:
+  push:
+    branches: [ main ]
   workflow_dispatch:
-  schedule:
-    - cron: '10 23,11 * * *'   # KST 08:10, 20:10
 
 permissions:
-  contents: write
-  pull-requests: write
+  contents: read
+
+jobs:
+  ping:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Say hello
+        run: |
+          echo "Hello from run $GITHUB_RUN_ID on $(date -u +%FT%TZ)"
